# minimal-megaparsec-tutorial

./: .envrc  LICENSE  README.md  cabal.project  map.txt  minimal-megaparsec-tutorial.cabal
.github/golden/: map.txt
.github/workflows/: actionlint.yaml  build.yml  lint.yml
app/: Main.hs
src/: Lib.hs  Render.hs
test/: Main.hs
